--- a/en/index.html
+++ b/en/index.html
@@ -32,8 +32,8 @@
 
   <!-- Botones de enlace a páginas externas -->
   <div class="external-buttons">
-    <a href="/index.html"><img src="/theme/images/asset0.png" alt="Botón 1"></a>
-    <a href="/acercanuevo.html"><img src="/theme/images//asset1.png" alt="Botón 2"></a>
+    <a href="https://davidvm29.github.io/pelican/en/index.html"><img src="https://davidvm29.github.io/pelican/en/theme/images/asset0.png" alt="Botón 1"></a>
+    <a href="https://davidvm29.github.io/pelican/en/acercanuevo.html"><img src="https://davidvm29.github.io/pelican/en/theme/images//asset1.png" alt="Botón 2"></a>
 
   </div>
 
@@ -41,7 +41,7 @@
     <ul class="open">
       <li class="has-sub"><span class="submenu-button"></span><a href="#">Know UCO</a>
         <ul style="display: block;">
-            <li><a href="/en/historia-en.html">History</a></li>
+            <li><a href="https://davidvm29.github.io/pelican/en/en/historia-en.html">History</a></li>
           <li class="has-sub"><span class="submenu-button"></span><a href="">Institutional organization</a>
             <ul style="display: block;">
               <li><a href="organizacion-institucional-equipo-gobierno.html">Government Team</a></li>
@@ -212,31 +212,31 @@
       </div>
       <div class="carousel-inner">
               <div class="carousel-item active">
-                  <img src="../theme/carousel-images/asset 13.jpeg" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/carousel-images/asset 13.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 4.jpeg" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/carousel-images/asset 4.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 7.png" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/carousel-images/asset 7.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 8.jpeg" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/carousel-images/asset 8.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 9.png" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/carousel-images/asset 9.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/STT-PDI-English.png" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/carousel-images/STT-PDI-English.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 10.png" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/carousel-images/asset 10.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 12.jpeg" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/carousel-images/asset 12.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 5.png" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/carousel-images/asset 5.png" class="d-block w-100" alt="...">
               </div>
       </div>
   </div>
@@ -245,25 +245,25 @@
     <div class="row" id="destacados">
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 14.jpeg" alt="University News" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/en/theme/images/asset 14.jpeg" alt="University News" longdesc="servicios/actualidad">
           <h2 class="titulo">University News</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 15.jpeg" alt="University News" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/en/theme/images/asset 15.jpeg" alt="University News" longdesc="servicios/actualidad">
           <h2 class="titulo" id="agenda">Agenda</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 16.jpeg" alt="University News" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/en/theme/images/asset 16.jpeg" alt="University News" longdesc="servicios/actualidad">
           <h2 class="titulo">Videos</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 17.jpeg" alt="University News" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/en/theme/images/asset 17.jpeg" alt="University News" longdesc="servicios/actualidad">
           <h2 class="titulo" id="ciencia">Science at UCO</h2>
         </a>
       </div>
@@ -275,11 +275,11 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="/en/noticia6-en.html">
-                  <img src="/theme/images/noticia6.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              <a href="https://davidvm29.github.io/pelican/en/en/noticia6-en.html">
+                  <img src="https://davidvm29.github.io/pelican/en//theme/images/noticia6.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="/en/noticia6-en.html">
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/en/noticia6-en.html">
                       Sara Muñoz Porras, re-elected president of the UCO Student Council (CEUCO)
                   </a>
               </figcaption>
@@ -288,11 +288,11 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="/en/noticia4-en.html">
-                  <img src="/theme/images/noticia4.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              <a href="https://davidvm29.github.io/pelican/en/en/noticia4-en.html">
+                  <img src="https://davidvm29.github.io/pelican/en//theme/images/noticia4.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="/en/noticia4-en.html">
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/en/noticia4-en.html">
                       The University of Córdoba, among the 800 best universities in the world according to the latest THE ranking
                   </a>
               </figcaption>
@@ -301,11 +301,11 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="/en/noticia3-en.html">
-                  <img src="/theme/images/noticia3.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              <a href="https://davidvm29.github.io/pelican/en/en/noticia3-en.html">
+                  <img src="https://davidvm29.github.io/pelican/en//theme/images/noticia3.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="/en/noticia3-en.html">
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/en/noticia3-en.html">
                       The Andalusian rectors address the new degree map and ask for equality with respect to private universities
                   </a>
               </figcaption>
@@ -314,11 +314,11 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="/en/noticia5-en.html">
-                  <img src="/theme/images/noticia5.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              <a href="https://davidvm29.github.io/pelican/en/en/noticia5-en.html">
+                  <img src="https://davidvm29.github.io/pelican/en//theme/images/noticia5.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="/en/noticia5-en.html">
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/en/noticia5-en.html">
                       #LaUCOenAbierto I Light of mined lives
                   </a>
               </figcaption>
@@ -387,7 +387,7 @@
 <script>
   var idioma = 'en'
 </script>
-<script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
+<script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
+<script src="https://davidvm29.github.io/pelican/en/theme/js/search.js" type="text/javascript"></script>
 </body>
 </html>
