--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
   <!-- Botones de enlace a páginas externas -->
   <div class="external-buttons">
-    <a href="/index.html"><img src="/theme/images/asset0.png" alt="Botón 1"></a>
-    <a href="/acercanuevo.html"><img src="/theme/images//asset1.png" alt="Botón 2"></a>
+    <a href="https://davidvm29.github.io/pelican/index.html"><img src="https://davidvm29.github.io/pelican/theme/images/asset0.png" alt="Botón 1"></a>
+    <a href="https://davidvm29.github.io/pelican/acercanuevo.html"><img src="https://davidvm29.github.io/pelican/theme/images//asset1.png" alt="Botón 2"></a>
 
   </div>
 
@@ -41,7 +41,7 @@
     <ul class="open">
       <li class="has-sub"><span class="submenu-button"></span><a href="#">Conoce la UCO</a>
         <ul style="display: block;">
-            <li><a href="/historia.html">Historia</a></li>
+            <li><a href="https://davidvm29.github.io/pelican/historia.html">Historia</a></li>
           <li class="has-sub"><span class="submenu-button"></span><a href="">Organización institucional</a>
             <ul style="display: block;">
               <li><a href="organizacion-institucional-equipo-gobierno.html">Equipo de Gobierno</a></li>
@@ -212,31 +212,31 @@
       </div>
       <div class="carousel-inner">
               <div class="carousel-item active">
-                  <img src="../theme/carousel-images/asset 13.jpeg" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/theme/carousel-images/asset 13.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 4.jpeg" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/theme/carousel-images/asset 4.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 7.png" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/theme/carousel-images/asset 7.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 8.jpeg" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/theme/carousel-images/asset 8.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 9.png" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/theme/carousel-images/asset 9.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/STT-PDI-English.png" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/theme/carousel-images/STT-PDI-English.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 10.png" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/theme/carousel-images/asset 10.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 12.jpeg" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/theme/carousel-images/asset 12.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                  <img src="../theme/carousel-images/asset 5.png" class="d-block w-100" alt="...">
+                  <img src="https://davidvm29.github.io/pelican/theme/carousel-images/asset 5.png" class="d-block w-100" alt="...">
               </div>
       </div>
   </div>
@@ -245,25 +245,25 @@
     <div class="row" id="destacados">
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 14.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/theme/images/asset 14.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
           <h2 class="titulo">Actualidad Universitaria</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 15.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/theme/images/asset 15.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
           <h2 class="titulo" id="agenda">Agenda</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 16.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/theme/images/asset 16.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
           <h2 class="titulo">Vídeos</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 17.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/theme/images/asset 17.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
           <h2 class="titulo" id="ciencia">Ciencia en la UCO</h2>
         </a>
       </div>
@@ -275,11 +275,11 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="/noticia6.html">
-                  <img src="/theme/images/noticia6.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              <a href="https://davidvm29.github.io/pelican/noticia6.html">
+                  <img src="https://davidvm29.github.io/pelican//theme/images/noticia6.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="/noticia6.html">
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/noticia6.html">
                       Sara Muñoz Porras, reelegida presidenta del Consejo de Estudiantes de la UCO (CEUCO)
                   </a>
               </figcaption>
@@ -288,11 +288,11 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="/noticia4.html">
-                  <img src="/theme/images/noticia4.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              <a href="https://davidvm29.github.io/pelican/noticia4.html">
+                  <img src="https://davidvm29.github.io/pelican//theme/images/noticia4.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="/noticia4.html">
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/noticia4.html">
                       La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE
                   </a>
               </figcaption>
@@ -301,11 +301,11 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="/noticia3.html">
-                  <img src="/theme/images/noticia3.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              <a href="https://davidvm29.github.io/pelican/noticia3.html">
+                  <img src="https://davidvm29.github.io/pelican//theme/images/noticia3.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="/noticia3.html">
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/noticia3.html">
                       Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas
                   </a>
               </figcaption>
@@ -314,11 +314,11 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="/noticia5.html">
-                  <img src="/theme/images/noticia5.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              <a href="https://davidvm29.github.io/pelican/noticia5.html">
+                  <img src="https://davidvm29.github.io/pelican//theme/images/noticia5.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="/noticia5.html">
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/noticia5.html">
                       #LaUCOenAbierto I Luz de las vidas minadas
                   </a>
               </figcaption>
@@ -387,7 +387,7 @@
 <script>
   var idioma = 'es'
 </script>
-<script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
+<script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
+<script src="https://davidvm29.github.io/pelican/theme/js/search.js" type="text/javascript"></script>
 </body>
 </html>
