--- a/es/drafts/noticiasfiltradas-en-en.html
+++ b/es/drafts/noticiasfiltradas-en-en.html
@@ -19,8 +19,8 @@
 <body>
     <div id="top-bar">
         <ul id="idiomas">
-            <li class="activo"><a href="https://davidvm29.github.io/pelican/es/noticiasfiltradas.html">ES</a></li>
-            <li><a href="https://davidvm29.github.io/pelican/es/noticiasfiltradas-en.html">EN</a></li>
+            <li><a href="https://davidvm29.github.io/pelican/es/noticiasFiltradas.html">ES</a></li>
+            <li class="activo"><a href="https://davidvm29.github.io/pelican/es/en/noticiasFiltradas-en.html">EN</a></li>
         </ul>
         <div id="buscar">
           <a class="boton-buscar"></a>
@@ -210,6 +210,7 @@ Ayudas financiadas por las subvenciones del Ministerio...            </div>
 <script>
     var calendarLinks = JSON.parse('{"2023-11-24": ["noticia6.html", "Sara Mu\u00f1oz Porras, reelegida presidenta del Consejo de Estudiantes de la UCO (CEUCO)", "Viernes, 24 Noviembre 2023 09:39", "Actualidad Universitaria"], "2024-02-12": ["noticia4.html", "La Universidad de C\u00f3rdoba, entre las 800 mejores universidades del mundo seg\u00fan el \u00faltimo ranking THE", "Martes, 12 febrero 2024 09:21", "Actualidad Universitaria", "noticia5.html", "#LaUCOenAbierto I Luz de las vidas minadas", "Jueves, 12 Febrero 2024 09:22", "Reportajes"], "2024-02-27": ["noticia3.html", "Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas", "Martes, 12 febrero 2024 13:07", "Actualidad Universitaria"]}'.replace(/&quot;/g, '"'));
     var idioma = 'en';
+    var SITEURL = 'https://davidvm29.github.io/pelican/es'
 </script>
 
 <script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
