--- a/drafts/resultadosbusqueda-en-en.html
+++ b/drafts/resultadosbusqueda-en-en.html
@@ -5,7 +5,7 @@
   <title>UCO-i02vimod</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="/theme/css/style.css">
+  <link rel="stylesheet" href="https://davidvm29.github.io/pelican/theme/css/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -17,8 +17,8 @@
 <body>
   <div id="top-bar">
 					<ul id="idiomas">
-						<li class="activo"><a href="/resultadosBusqueda.html">ES</a></li>
-						<li><a href="/en/resultadosBusqueda-en.html">EN</a></li>
+              <li><a href="https://davidvm29.github.io/pelican/resultadosBusqueda.html">ES</a></li>
+              <li class="activo"><a href="https://davidvm29.github.io/pelican/en/resultadosBusqueda-en.html">EN</a></li>
 					</ul>
 					<div id="buscar">
             <a class="boton-buscar"></a>
@@ -31,8 +31,8 @@
 
   <!-- Botones de enlace a páginas externas -->
   <div class="external-buttons">
-    <a href="/index.html"><img src="/theme/images/asset0.png" alt="Botón 1"></a>
-    <a href="/acercanuevo.html"><img src="/theme/images/asset1.png" alt="Botón 2"></a>
+    <a href="https://davidvm29.github.io/pelican/index.html"><img src="https://davidvm29.github.io/pelican/theme/images/asset0.png" alt="Botón 1"></a>
+    <a href="https://davidvm29.github.io/pelican/acercanuevo.html"><img src="https://davidvm29.github.io/pelican/theme/images/asset1.png" alt="Botón 2"></a>
 
   </div>
 
@@ -40,7 +40,7 @@
     <ul class="open">
       <li class="has-sub"><span class="submenu-button"></span><a href="#">Conoce la UCO</a>
         <ul style="display: block;">
-            <li><a href="/en/historia-en.html">Historia</a></li>
+            <li><a href="https://davidvm29.github.io/pelican/historia-en.html">Historia</a></li>
           <li class="has-sub"><span class="submenu-button"></span><a href="">Organización institucional</a>
             <ul style="display: block;">
               <li><a href="organizacion-institucional-equipo-gobierno.html">Equipo de Gobierno</a></li>
@@ -255,12 +255,12 @@
               <a href="organizacion/secretariageneral/proteccion-de-datos">Protección de Datos</a>
           </div>
         <div class="col-md-12 logos-footer mb-3">
-            <a href="index.html" class="logo-footer"><img src="/theme/images/asset 22.png" width="50" height="50" alt="Universidad de Córdoba" title="Universidad de Córdoba"></a>
-            <a href="http://www.ceia3.es" target="_blank" class="logo-footer"><img src="/theme/images/asset 23.png" width="50" height="50" alt="Universidad de Córdoba" title="Universidad de Córdoba"></a>
-            <a href="https://www.uco.es/resiliencia" target="_blank" class="logo-footer"><img src="/theme/images/asset 24.jpeg" height="50" alt="Universidad de Córdoba" title="Fondos PRTR"></a>
-            <a href="https://www.bancosantander.es/es/universidades" target="_blank" class="logo-footer"><img src="/theme/images/asset 25.jpeg" height="50" alt="Universidad de Córdoba" title="Santander Universidades"></a>
-            <a href="https://www.uco.es/investigacion/portal/HRS4R" class="logo-footer"><img src="/theme/images/asset 26.png" height="50" alt="HR" title="HR"></a>
-            <a href="http://www.uco.es/zonacardioasegurada/" target="_blank" class="logo-footer logo-zonacardio"><img src="/theme/images/asset 27.png" width="100px" alt="Zona Cardio asegurada" title="Zona Cardio Asegurada - Universidad de Córdoba"></a>
+            <a href="index.html" class="logo-footer"><img src="https://davidvm29.github.io/pelican/theme/images/asset 22.png" width="50" height="50" alt="Universidad de Córdoba" title="Universidad de Córdoba"></a>
+            <a href="http://www.ceia3.es" target="_blank" class="logo-footer"><img src="https://davidvm29.github.io/pelican/theme/images/asset 23.png" width="50" height="50" alt="Universidad de Córdoba" title="Universidad de Córdoba"></a>
+            <a href="https://www.uco.es/resiliencia" target="_blank" class="logo-footer"><img src="https://davidvm29.github.io/pelican/theme/images/asset 24.jpeg" height="50" alt="Universidad de Córdoba" title="Fondos PRTR"></a>
+            <a href="https://www.bancosantander.es/es/universidades" target="_blank" class="logo-footer"><img src="https://davidvm29.github.io/pelican/theme/images/asset 25.jpeg" height="50" alt="Universidad de Córdoba" title="Santander Universidades"></a>
+            <a href="https://www.uco.es/investigacion/portal/HRS4R" class="logo-footer"><img src="https://davidvm29.github.io/pelican/theme/images/asset 26.png" height="50" alt="HR" title="HR"></a>
+            <a href="http://www.uco.es/zonacardioasegurada/" target="_blank" class="logo-footer logo-zonacardio"><img src="https://davidvm29.github.io/pelican/theme/images/asset 27.png" width="100px" alt="Zona Cardio asegurada" title="Zona Cardio Asegurada - Universidad de Córdoba"></a>
         </div>
 
         <div class="col-md-12 redes-sociales">
@@ -279,10 +279,11 @@
 </footer>
 <script>
   var idioma = 'en'
+  var SITEURL = 'https://davidvm29.github.io/pelican'
 </script>
 
-<script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
-<script src="/theme/js/enlacesBusqueda.js"></script>
+<script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
+<script src="https://davidvm29.github.io/pelican/theme/js/search.js" type="text/javascript"></script>
+<script src="https://davidvm29.github.io/pelican/theme/js/enlacesBusqueda.js"></script>
 </body>
 </html>
