--- a/en/drafts/historia-es.html
+++ b/en/drafts/historia-es.html
@@ -176,6 +176,7 @@
 </body>
 <script>
     var idioma = 'es'
+    var SITEURL = 'https://davidvm29.github.io/pelican/en'
 </script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/search.js" type="text/javascript"></script>
