--- a/en/index.html
+++ b/en/index.html
@@ -386,6 +386,7 @@
 </footer>
 <script>
   var idioma = 'en'
+  var SITEURL = 'https://davidvm29.github.io/pelican/en'
 </script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/search.js" type="text/javascript"></script>
