--- a/es/drafts/historia-en-en.html
+++ b/es/drafts/historia-en-en.html
@@ -176,6 +176,7 @@
 </body>
 <script>
     var idioma = 'en'
+    var SITEURL = 'https://davidvm29.github.io/pelican/es'
 </script>
 <script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/es/theme/js/search.js" type="text/javascript"></script>
