--- a/historia.html
+++ b/historia.html
@@ -176,6 +176,7 @@
 </body>
 <script>
     var idioma = 'es'
+    var SITEURL = 'https://davidvm29.github.io/pelican'
 </script>
 <script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/theme/js/search.js" type="text/javascript"></script>
