--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
 </footer>
 <script>
   var idioma = 'es'
+  var SITEURL = 'https://davidvm29.github.io/pelican'
 </script>
 <script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/theme/js/search.js" type="text/javascript"></script>
